# BookStore

./: .gitattributes  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
bookstore/: settings.py
order/: factories.py  urls.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: admin.py  factories.py
product/migrations/: 0001_initial.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
